--- a/PalPharmacyApp/src/main/res/values/strings.xml
+++ b/PalPharmacyApp/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">PalPharmacy</string>
+    <string name="app_name">Pal-Pharmacy</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">close navigation drawer</string>
+
 </resources>
